--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.2",
+    "react-native-fetch-blob": "^0.10.8",
     "react-native-gesture-handler": "^2.17.0",
+    "react-native-pdf": "^6.7.5",
     "react-native-reanimated": "^3.12.1",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.32.0",
